<resources>
    <string name="app_name">Tour Guider</string>
    <string name="title_activity_home_page">Home_page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_user_name">Enter User name</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="forts">Forts</string>
    <string name="waterfalls">WaterFalls</string>
    <string name="hotels">Hotels</string>
    <string name="welcome_to_tour_guid_app_you_have_landed_in_madhya_padesh">Welcome to Tour Guid app,You have landed in madhya padesh</string>
    <string name="temples">Temples</string>
    <string name="todo">TODO</string>
    <string name="images">Images</string>
    <string name="combination_of_all_category">Combination of all category</string>
    <string name="name">name</string>
    <string name="pass">password</string>
    <string name="tname">data</string>
    <string name="msg">your pass dosen\'t match</string>
    <string name="pettern">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+</string>
    <string name="msg1">hey places are vacant</string>
    <string name="query">select uname,password from data</string>
    <string name="uname">uname</string>

    <string name="user">user</string>
    <string name="msg2">invalid user input</string>
    <string name="wel">welcome</string>
    <string name="to">_to_tour_guid_app_you_have_landed_in_madhya_padesh</string>
    <string name="databasename">data.db</string>
    <string name="h1">Radisson Blu Hotel</string>
    <string name="p1">Indore</string>
    <string name="h2">Courtyard by Marriott</string>
    <string name="p2">Bhopal</string>
    <string name="h3">Ginger Hotel</string>
    <string name="p3">Indore</string>
    <string name="h4"><![CDATA[Country Inn & Suites By Carlson]]></string>
    <string name="p4">Indore</string>
    <string name="h5">Taj Usha Kiran Palace</string>
    <string name="p5">Gwalior</string>
    <string name="h6">Radisson Jass Hotel</string>
    <string name="p6">Khajuraho</string>
    <string name="p7">Indore</string>
    <string name="h7">Marriott Hotel</string>
    <string name="url">https://www.tripadvisor.in/Hotels-g297646-Madhya_Pradesh-Hotels.html</string>
    <string name="f1">REWA Fort</string>
    <string name="fp1">REWA</string>
    <string name="f2">Narsinghgarh fort</string>
    <string name="fp2">REWA</string>
    <string name="fp3">Gwalior</string>
    <string name="f3">Asirgarh Fort</string>
    <string name="f4">Ahilya fort</string>
    <string name="fp4">Indore</string>
    <string name="ms3">you are in list of forts</string>
    <string name="t1">Mahakaleshwar Jyotirlinga</string>
    <string name="tp1">Ujjain</string>
    <string name="tp2">Ujjain</string>
    <string name="tp3">Ujjain</string>
    <string name="tp4">Ujjain</string>
    <string name="tp5">Ujjain</string>
    <string name="tp6">Khajuraho</string>
    <string name="tp7">Orchha</string>
    <string name="tp8">Chitrakoot</string>
    <string name="t8">Bharat Milap Mandir</string>
    <string name="t7">Chaturbhuj Temple</string>
    <string name="t6">Kandariya Mahadeo Temple</string>
    <string name="t5">Chintaman Ganesh Temple</string>
    <string name="t4">Kal Bhairav temple</string>
    <string name="t3">Bhairav Parvat,</string>
    <string name="t2">Bada Ganesh Ka Mandir</string>
    <string name="msg4">hey you don\'t press it again just see the list</string>
    <string name="upgradequery">drop table if exists credencial</string>
    <string name="upgradequery1">drop table if existsdrop table if exists data data</string>
    <string name="oncreatequery">create table data(name text,uname text,password text)</string>
</resources>
