<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home_page"
    android:background="@drawable/homeback">

    <TextView
        android:id="@+id/marquee"
        android:layout_width="match_parent"
        android:layout_height="49dp"

        android:singleLine="true"
        android:text=""
        android:textColor="#000000"
        android:maxLines="1"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:textSize="20sp"
        android:textStyle="italic"
        tools:ignore="EllipsizeMaxLines" />

    <Button
        android:id="@+id/temple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="151dp"
        android:text="@string/temples"
        android:textSize="30sp"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/fort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/forts"
        android:textSize="30sp"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/hotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="147dp"
        android:text="@string/hotels"
        android:textSize="30sp" />

    <Button
        android:id="@+id/images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="73dp"
        android:text="@string/images"
        android:textSize="30sp"
        android:layout_alignParentLeft="true" />

</RelativeLayout>